--- a/src/design/components/single-task.scss
+++ b/src/design/components/single-task.scss
@@ -55,6 +55,6 @@
 
 
 [data-isDragging = true] {
-    /* background-color: rgb(190, 59, 241) !important; */
     background-color: var(--clr-bg-dnd-task) !important;
+    box-shadow: var(--box-shadow-dnd-thin) !important;
 }
