--- a/src/design/globals/app-boilerplate.scss
+++ b/src/design/globals/app-boilerplate.scss
@@ -19,9 +19,6 @@ body {
 }
 
 .app-container {
-    min-height: 100vh;
-    min-width: 100vw;
-
     background-color: var(--clr-bg-main);
     color: var(--clr-txt-main);
     
