--- a/src/design/globals/scrollbar.scss
+++ b/src/design/globals/scrollbar.scss
@@ -37,3 +37,7 @@ body::-webkit-scrollbar-thumb:hover {
 ::-webkit-scrollbar-thumb:hover {
     background-color: chartreuse;
 } */
+
+/* @media screen and (--webkit-min-device-pixel-ratio: 0) {
+    
+} */
