--- a/src/design/utilities/color-mode-variables.scss
+++ b/src/design/utilities/color-mode-variables.scss
@@ -35,6 +35,7 @@
 
     --box-shadow-thick: 0 0 6px hsla(0, 0%, 8%, 0.5);
     --box-shadow-thin: 0 0 4px hsla(0, 0%, 8%, 0.5);
+    --box-shadow-dnd-thin: 0 0 4px hsla(0, 0%, 5%, 0.5);
     
     --clr-outline: hsl(var(--hue-accent), 100%, 60%);
 }
@@ -55,6 +56,7 @@
 
     --box-shadow-thick: 0 0 6px hsla(0, 0%, 50%, 0.5);
     --box-shadow-thin: 0 0 4px hsla(0, 0%, 50%, 0.5);
+    --box-shadow-dnd-thin: 0 0 4px hsla(0, 0%, 35%, 0.5);
 
     --clr-outline: hsl(var(--hue-accent), 100%, 50%);
 }
